<resources>
    <string name="app_name">OptimizApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>

    <string name="cargando">Cargando :</string>
    <string name="salud">Salud :</string>
    <string name="nivel">Nivel carga :</string>
    <string name="estado">Estado :</string>
    <string name="tecnologia">Tecnología :</string>
    <string name="escala">Escala :</string>
    <string name="temperatura">Temperatura :</string>
    <string name="voltage">Voltage :</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="transition">transition</string>

    <integer-array name="fragment_colors">
        <item>@color/blue</item>
        <item>@color/red</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>

    <!-- Lista de titulos de navegacion-->
    <string-array name="nav_options">
        <item>Apps</item>
        <item>Procesos</item>
        <item>Memoria</item>
        <item>Batería</item>
        <item>Invitar amigos</item>
        <item>Acerca de</item>
    </string-array>

    <!-- Lista de iconos de navegacion-->
    <array name="navigation_iconos">
        <item>@drawable/ic_apps</item>
        <item>@drawable/ic_processes</item>
        <item>@drawable/ic_memory</item>
        <item>@drawable/ic_battery</item>
        <item>@drawable/ic_invite</item>
        <item>@drawable/ic_about</item>
    </array>

    <string-array name="menu_task_operation">
        <item>Abrir</item>
        <item>Terminar</item>
        <item>Terminar todos</item>
        <item>Desinstalar</item>
    </string-array>
    <string name="btn_task">Tasks</string>
    <string name="btn_service">Services</string>
    <string name="btn_system">System</string>

    <string name="operation">Operation</string>
    <string name="menu_switch">Switch To</string>
    <string name="menu_kill">Kill it!</string>
    <string name="menu_detail">See Detail</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="cancel">Cancel</string>

    <string name="memory_unknown">Unknown</string>

    <string name="message_switch_fail">Cant switch to this task, because it has no interface.</string>
    <string name="message_no_market">Cant start Market, please check your phone.</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_intro">Intro</string>
</resources>
