<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first">

        <ImageView
            android:id="@+id/img_batt"
            android:transitionName="appIcon"
            android:layout_margin="8dp"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/plugged"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/cargando" />

                <TextView
                    android:id="@+id/plugged_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/health"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/salud" />

                <TextView
                    android:id="@+id/health_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/nivel" />

                <TextView
                    android:id="@+id/level_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/estado" />

                <TextView
                    android:id="@+id/status_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/technology"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/tecnologia" />

                <TextView
                    android:id="@+id/technology_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/scale"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/escala" />

                <TextView
                    android:id="@+id/scale_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/temperatura" />

                <TextView
                    android:id="@+id/temperature_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividers" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/voltage"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:text="@string/voltage" />

                <TextView
                    android:id="@+id/voltage_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="20"
                    android:textColor="@color/secondary" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>